fixed items overflowing

--- a/Webpage/css/style.css
+++ b/Webpage/css/style.css
@@ -16,7 +16,7 @@ purple: #2D142C rgb(45, 20, 44)
   box-sizing: border-box;
   margin: 0;
   padding: 0;
- 
+  scroll-behavior: smooth;
 }
 
 html,
@@ -27,6 +27,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: #2D142C;
+  
   /* min-width: 730px; */
 }
 
@@ -68,13 +69,16 @@ a {
   overflow-x: hidden;
   overflow-y: auto;
   perspective: 300px;
+  
+  /* word-wrap: break-word; */
+
 }
 
 .groupParallax {
   position: relative;
   height: 100vh;
   width: 100vw;
-  transform-style: preserve-3d;
+  transform-style: preserve-3d; 
 }
 
 .layerParallax {
@@ -157,7 +161,7 @@ a {
     font-size: 1rem;
     position: absolute;
     right: 2.5rem;
-    top: 2.5rem;
+    top: 2rem;
 }
 
 .hero-text ul li {
@@ -192,7 +196,7 @@ a {
   background-color: #EB770B; 
 }
 
-.info {
+.gridContainer {
   transform: translateZ(0) scale(1);  /*regular scrolling*/
   z-index: 6;
   background: #2D142C;
@@ -201,19 +205,29 @@ a {
   justify-content: center;
   justify-items: center;
   align-items: center;
+  block-size: fit-content;
 }
 
-.info img{
-  width: 80%;
-  margin-bottom: 3rem;
+.subHeader {
+  color: #EB770B;
+  font-size: 2rem;
+  font-weight: 500;
+  text-justify:distribute-all-lines;
+  text-align: center;
+  margin: 2rem 4rem 4rem 4rem;
 }
 
-.info h2, .info p {
+.gridContainer img{
+  width: fit-content;
+  margin-bottom: 2rem;
+}
+
+.gridContainer h2, .gridContainer p {
   margin-bottom: 1rem;
 }
 
 .text {
-  margin-bottom: 3rem;
+  margin-bottom: 4rem;
   font-size: 0.7rem;
 }
 .text p {
@@ -237,24 +251,30 @@ a {
     transition: all 0.3s ease-in-out;
   }
 
-  .info {
+  .gridContainer{
     display: grid;
-    grid-template-columns: 1fr 1fr; /*fractions*/
-    grid-column-gap: 3rem;
+    /* grid-column: auto; */
+    grid-template-columns: 1fr 1fr;
+    /* grid-template-columns: max-content max-content max-content; */
+    grid-column-gap: 1rem;
     align-items: center;
     text-align: left;
   }
-  .info img {
-    width: fit-content;
-    justify-self: end;
+  .subHeader { /*To not display next to it*/
+    grid-column: 1/3;
   }
 
+  .gridContainer img {
+    width: 80%;
+    justify-self: center;
+  }
+  
   .text {
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
     font-size: 1rem;
   }
   .text p {
-    margin: 1rem 1rem;
+    /* margin: 1rem 1rem; */
     font-size: 1.2rem;
     font-weight: 500;
   }
